# autonomous-analytics-agents

./: .env.example  .gitignore  Dockerfile  GUIDE.md  GUIDE_EN.md  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: settings.py
scripts/: deploy-gcp.sh  generate_demo_data.py  generate_saas_data.py  teardown-gcp.sh
src/: __init__.py
src/agents/: __init__.py
src/analytics/: automl.py  forecasting.py  kpi.py  statistics.py
src/ingestion/: file_loaders.py  web_scraper.py
src/insights/: generator.py
src/llm/: anthropic_provider.py  base.py  factory.py  google_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  together_provider.py
src/quality/: scorer.py
src/rag/: store.py
src/reporting/: generator.py
src/storage/: gcp_storage.py
src/viz/: chart_engine.py
src/workflow/: graph.py  state.py
terraform/: .gitignore  main.tf  terraform.tfvars.example  variables.tf
tests/: test_analytics.py  test_ingestion.py  test_llm.py  test_workflow.py
